--- a/css/styles.css
+++ b/css/styles.css
@@ -1,24 +1,858 @@
-.header {
-    background-color:#858AE1;
-    color:white;
+/*************** BASE STYLES ****************/
+
+*{
+    box-sizing:border-box;
+    font-family: 'Abel', sans-serif;
+  }
+
+
+  /************ GRID *************/
+
+  .grid {
+    display: grid;
+    width:100%;
+    grid-template-columns:100%;
+    grid-template-rows:auto;
+    grid-template-areas:
+    "header"
+    "nav"
+    "main";
+  }
+
+
+  nav {
+    grid-area: nav;
+  }
+
+  main {
+  grid-area:main;
+  }
+
+
+
+  .headline {
+    background-color:white;
+    margin-bottom:0;
+    margin-top:0;
+    padding:15px 20px;
+    border-right:rgb(201, 201, 201) solid thin;
+  }
+
+
+  /*************** HEADER ****************/
+
+
+  header {
+    grid-area:header;
     display:flex;
-    align-items: center;
+    padding:10px 2px;
+    align-items:center;
+    background-color:#7377bf;
+    color:white;
+
+  }
+
+  h1 {
+    padding-left:1em;
+  }
+
+
+  .background {
+    background-color:#DEDEE9;
+    border:black thin solid;
+
+  }
+
+
+
+  .app {
+  font-size:1.3em;
+  margin-right:auto;
+  }
+
+
+  .name {
+    font-size: .9em;
+    padding-left:10px;
+    padding-right:20px;
+
+  }
+
+
+    #bell {
+      height:25px;
+      width:25px;
+      border-right: solid thin #333AFB;
+      padding-right: 5px;
+
+
+
+    }
+
+    #bell:hover {
+      transform: scale(1.2);
+      transition: .5s ease-in-out;
+      animation: turn 0.5s infinite;
+      cursor:pointer;
+
+
+    }
+
+    .avatar {
+      width: 30px;
+      height: 30px;
+      border-radius:50%;
+
+    }
+
+
+    .dot {
+      height: 5px;
+      width: 5px;
+      background-color: rgb(33, 231, 33);
+      border-radius: 50%;
+      display: flex;
+      margin-bottom:auto;
+      margin-top:5px;
+      margin-right:.5em;
+      margin-left:.5em;
+    }
+
+
+
+
+
+  /*************** NAV ****************/
+
+    nav {
+      grid-area:nav;
+      display:flex;
+      justify-content:center;
+      align-items:center;
+      background-color:#565E9E;
+    }
+
+
+    .dashboard,
+    .mem,
+    .visits,
+    .settings {
+      flex-direction:row;
+      height:70px;
+      width:70px;
+      padding:20px;
+
+    }
+
+
+
+  /*************** SEARCH & ALERT ****************/
+
+
+  .main-header {
+    display:flex;
+    justify-content:space-between;
+    align-items:center;
+    color:#494949;
+    background-color:rgb(243, 243, 243);
+
+  }
+
+  .alert-container {
+    display: flex;
+    justify-content: center;
+  }
+
+
+
+    .alert {
+      display:flex;
+      justify-content: center;
+      background-color: #7377bf;
+      color: white;
+      border-radius:4px;
+      width:80%;
+      margin: 1em 2em;
+      padding-left:10px
+
+    }
+
+
+    .close {
+      cursor: pointer;
+      font-size: .7em;
+      margin-left:auto;
+      padding-right:10px;
+    }
+
+
+
+    .search-bar {
+      display:flex;
+      justify-content: center;
+      border-style: none;
+      background-color: #f4f4f4;
+      width:80%;
+      margin: 1em auto;
+      padding: .75em;
+      border-radius:5px;
+    }
+
+    .search-icon {
+          margin-top: 1.19rem;
+          float: right;
+          position:relative;
+          margin-right: 4.9rem;
+          margin-top:-2.8rem;
+          background-position: right;
+    }
+
+
+
+
+    /*****containers*****/
+
+
+    .search-container {
+      border-bottom: 1px solid #b2b2b2;
+
+    }
+
+    .barChart-container {
+      padding: 1rem;
+      border-right: 1px solid #b2b2b2;
+    }
+
+    .doughnutChart-container {
+      padding: 1rem;
+      border-top: 1px solid #b2b2b2;
+    }
+
+    .twitter-container {
+      padding: 1rem;
+      border-top: 1px solid #b2b2b2;
+      border-bottom: 1px solid #b2b2b2;
+    }
+
+    .social-stats-container {
+      padding: 1rem;
+      border-right: 1px solid #b2b2b2;
+    }
+
+    .members-container {
+      padding: 1rem;
+      border-top: 1px solid #b2b2b2;
+    }
+
+    .message-container {
+      border-top: 1px solid #b2b2b2;
+      border-right: 1px solid #b2b2b2;
+    }
+
+    .settings-container {
+      padding: 1rem;
+      border-top: 1px solid #b2b2b2;
+    }
+
+
+
+
+
+  /*************** TRAFFIC CHART ****************/
+
+
+  .active {
+    background-color:#81c98f;
+    color:white;
+    padding:2px 5px;
+    border-radius:5px;
+  }
+
+
+    .line-container {
+      width:93vw;
+    }
+
+
+    .chart-container {
+      display:flex;
+      height:auto;
+      width:auto;
+
+
+    }
+
+    .time {
+      display:flex;
+      justify-content:flex-end;
+      padding-right:1.5em;
+      width:95%;
+    }
+
+    .time ul {
+      display:flex;
+      font-size: 1em;
+
+    }
+
+    li {
+      display: inline;
+      margin: 0 5px;
+      font-weight: bold;
+    }
+
+
+    .card {
+      display:flex;
+      width:95%;
+    }
+
+
+
+    .lineChartBox {
+      margin-left:1em;
+    }
+
+
+  /*************** SOCIAL STATS ****************/
+
+    .widget {
+      display:flex;
+      width:100%;
+      justify-content: space-around;
+      background-color: #f4f4f4;
+      margin:1em auto;
+      border: 1px solid #cecece;
+      border-radius: 5px;
+      padding:10px;
+      align-items:center;
+    }
+
+
+    .card-header,
+    .traffic-header {
+      text-transform: uppercase;
+      padding-bottom:10px;
+      margin-left: .5em;
+      font-size: 1em;
+      color: grey;
+    }
+
+  .traffic-header {
+    margin-left:1.2em;
+  }
+
+
+
+  .social-icon {
+    display:text;
+    background-color: #7477bf;
+    transform-origin: 50% 50%;
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+
+  }
+
+
+
+
+  .social-info p:first-child {
+    color: #7477bf;
+    font-weight: 700;
+    margin:1em;
+    text-align:left;
+
+  }
+
+
+    .social-info p:last-child {
+      color: #777;
+      font-weight: 300;
+      text-align:right;
+
+
+    }
+
+
+    .data {
+      font-size: 2.5em;
+      margin:0;
+
+    }
+
+  /*************** MESSAGE***************/
+
+
+    .search-for-user,
+    .message {
+      padding: 1em;
+      display: flex;
+      width: 80%;
+      margin: 1em auto;
+      border-radius: 5px;
+      background-color: #ecebeb;
+      border-style: none;
+    }
+
+
+.send {
+  display: flex;
+  justify-content:center;
+  margin:1em auto;
+  width: 80%;
+  background-color:#7377bf;;
+  padding: 1em;
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
+
 }
 
-.item-1 {
-    font-size: 1.5em;
+
+
+
+    .save,
+    .cancel {
+      display: flex;
+      justify-content: center;
+      width: 80%;
+      margin: 1em auto;
+      background-color:#7377bf;;
+      padding: 1em;
+      color: white;
+      border-radius: 5px;
+      cursor: pointer;
+
+    }
+
+
+
+  /*************** SETTINGS ****************/
+
+
+
+    .setting {
+      display: block;
+      margin: .9em;
+      cursor: pointer;
+    }
+
+    .options {
+      display: flex;
+      justify-content: space-between;
+      width: 95%;
+    }
+
+
+    .dropdown {
+      display:flex;
+      width: 80%;
+      margin: 1em auto;
+      padding: .7em;
+      font-size: 1.1em;
+      border-radius: 5px;
+      background-color:#cccccc;
+      color:#ffff;
+      cursor: pointer;
+    }
+
+
+    .switch {
+      position: relative;
+      display: inline-block;
+      width: 60px;
+      height: 34px;
+      margin: 1em;
+      padding-bottom:10px;
+    }
+
+    /***** Hide default HTML checkbox *****/
+    .switch input {
+      opacity: 0;
+      width: 0;
+      height: 0;
+    }
+
+    /****** The slider******/
+    .slider {
+      position: absolute;
+      cursor: pointer;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: #d6d6d6;
+      transition: .4s;
+    }
+
+    .slider:before {
+      position: absolute;
+      content: "";
+      height: 26px;
+      width: 26px;
+      left: 4px;
+      bottom: 4px;
+      background-color: white;
+      transition: .4s;
+    }
+
+    input:checked + .slider {
+      background-color: rgb(75, 75, 113);
+    }
+
+    input:focus + .slider {
+      box-shadow: 0 0 1px rgb(75, 75, 113);
+    }
+
+    input:checked + .slider:before {
+      transform: translateX(26px);
+    }
+
+
+    .slider.round {
+      border-radius: 34px;
+    }
+
+    .slider.round:before {
+      border-radius: 50%;
+    }
+
+  /******** Members ********/
+
+
+  .member {
+    display: flex;
+    justify-content: space-between;
+    font-size: 80%;
+    padding: 10px;
+  }
+
+
+    .member img {
+      width: 45px;
+      height: 45px;
+      margin-right: 10px;
+      border-radius: 50%;
+    }
+
+
+    .member:not(:last-of-type){
+      margin-bottom: 20px;
+      border-bottom: 1px solid #c7c5c5;
+    }
+
+
+    .member
+    .name,
+    .date,
+    .symbol {
+      margin-top: 6px;
+    }
+
+
+    .member
+    .name a {
+      text-decoration: none;
+      display: block;
+      color: #7477bf;
+      padding-top:0;
+    }
+
+    .member
+    .info {
+      display: flex;
+    }
+
+  /************ RECENT ACTIVITY *************/
+
+    .members {
+      width: 100%;
+    }
+
+    .member
+    .info {
+      width: 80%;
+    }
+
+    .arrow {
+      color: rgb(180, 180, 180);
+    }
+
+
+
+    .post-time {
+      font-size:80%;
+      font-style: italic;
+
+    }
+
+
+
+
+
+  /*************** TABLET ****************/
+  /**************************************/
+
+  @media (min-width: 768px) {
+
+
+
+   main {
+     grid-area:main;
+     background-color:white;
+   }
+
+
+  h1 {
+
+      margin-bottom:0;
+      margin-top:0;
+      padding:15px 20px;
+
+  }
+
+  .background {
+    display:flex;
+    padding:0;
+    background-color:white;
+    border-bottom:none;
+  }
+
+
+
+  .search-bar-container {
+    padding-left:260px;
+    background-color:#DEDEE9;
+    width:100%;
+    border-left:#494949 solid thin;
+    padding-top:10px;
+
+  }
+
+
+  .search-icon {
+    margin-right: 3.9rem;
+
+
+  }
+
+  .alert-container {
+    display:flex;
+    justify-content:center;
+
+  }
+
+
+  .lineChartBox {
+    display:flex;
+    height:auto;
+    max-height:45vh;
+    width:auto;
+    margin:2em;
+  }
+
+
+
+  .line-container {
+    display:flex;
+    margin:auto;
+    width:93vw;
+    }
+
+
+  .chart-wrapper {
+    display:flex;
+    height:auto;
+    width:auto;
+  }
+
+
+.social-widgets {
+  display:flex;
+  margin:auto;
+}
+
+
+  .doughnutChart-container {
+    border-top:none;
+    width:50%;
+  }
+
+  .barChart-container {
+    width:50%;
+  }
+
+
+  .social-widgets {
+    display: flex;
+    align-content:center;
+    justify-content: space-between;
+    width:90%;
+
+  }
+
+
+  .widget {
+    display:flex;
+    width:30%;
+    margin:1em;
+
+  }
+
+
+
+  .message,
+  .search-for-user,
+  .send {
+    display:flex;
+    margin:auto;
+    padding: 1em;
+    width: 80%;
+    border-radius: 5px;
+    margin-bottom:1em;
+
+  }
+
+  .send {
+  text-align:center;
+  }
+
+  .save,
+  .cancel,
+  .dropdown {
+    margin: 1em 3em;
+  }
+
+  }
+
+
+  /*************** DESKTOP ****************/
+  /***************************************/
+
+  @media (min-width: 1024px) {
+
+  .grid {
+      display:grid;
+      grid-template-columns: 60px auto auto;
+      grid-template-areas:
+      "header header header"
+      "nav main main";
+  }
+
+nav {
+  grid-area:nav;
+  display:flex;
+  flex-direction:column;
+  justify-content: flex-start;
+
+}
+
+header {
+  grid-area:header;
+  display:flex;
 
 }
 
 
-#bell {
-    width:20px;
-    height:20px;
-    border-right: solid thin #4C55ED;
-    padding-right:10px;
+main {
+  grid-area:main;
 }
 
-.avatar {
-    width:30px;
-    height:30px;
+
+
+header {
+  grid-area:header;
+  display:flex;
+  padding:10px 2px;
+  align-items:center;
+  background-color:#7377bf;
+  color:white;
+
+}
+
+
+
+
+  .background {
+    display:flex;
+    padding:0;
+    background-color:white;
+    border-bottom:none;
+  }
+
+
+
+
+
+
+  .search-bar-container {
+    padding-left:260px;
+    background-color:#DEDEE9;
+    width:100%;
+    border-left:#494949 solid thin;
+    padding-top:10px;
+
+  }
+
+
+  .search-icon {
+    margin-right: 3.9rem;
+
+
+  }
+
+  .alert-container {
+    display:flex;
+    justify-content:center;
+
+  }
+
+
+
+
+
+  .members-wrapper {
+    display:flex;
+  }
+
+
+
+  .member {
+    padding-bottom:25px;
+
+
+  }
+
+
+
+.social-stats-container {
+  width:50%;
+  margin-top:0;
+
+  }
+
+  .members-container {
+    width:50%;
+    border-top:none;
+  }
+
+
+
+.settings-wrapper {
+  display:flex;
+}
+
+.message-container {
+  width:50%;
+
+}
+
+
+
+
+.settings-container {
+  width:50%;
+}
+
 }
